Refactor error relationship and pattern graph service