@@ -8,16 +8,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-// Service for discovering cross-project debugging patterns and error clusters
 @Service
 public class PatternService {
 
@@ -32,96 +31,151 @@ public class PatternService {
         this.errorRecordRepository = errorRecordRepository;
     }
 
-    // Find cross-project error clusters and format them into PatternDto results
     @Transactional(readOnly = true)
     public List<PatternDto> findPatterns() {
-        List<Set<Long>> components = graphService.crossProjectComponents();
-        if (components.isEmpty()) {
-            return List.of();
+        List<Set<Long>> clusters = graphService.crossProjectComponents();
+        if (clusters.isEmpty()) {
+            return new ArrayList<>();
         }
 
-        List<PatternDto> patterns = new ArrayList<>(components.size());
-        for (Set<Long> component : components) {
-            List<ErrorRecord> records = new ArrayList<>(
-                    errorRecordRepository.findAllById(new ArrayList<>(component)));
+        List<PatternDto> patternsList = new ArrayList<>();
+
+        for (Set<Long> clusterIds : clusters) {
+            List<Long> idList = new ArrayList<>(clusterIds);
+            Iterable<ErrorRecord> dbRecords = errorRecordRepository.findAllById(idList);
+            
+            List<ErrorRecord> records = new ArrayList<>();
+            for (ErrorRecord r : dbRecords) {
+                if (r != null) {
+                    records.add(r);
+                }
+            }
+
             if (records.isEmpty()) {
                 continue;
             }
 
             String tag = dominantTag(records);
 
-            Set<String> projects = new HashSet<>();
+            Set<String> uniqueProjects = new HashSet<>();
             for (ErrorRecord record : records) {
-                if (record.getProject() != null && !record.getProject().isBlank()) {
-                    projects.add(record.getProject().trim());
+                String project = record.getProject();
+                if (project != null && !project.trim().isEmpty()) {
+                    uniqueProjects.add(project.trim());
                 }
             }
 
-            // Sort examples by timestamp (newest first) with ID fallback
-            records.sort(Comparator
-                    .comparing(ErrorRecord::getCreatedAt,
-                            Comparator.nullsLast(Comparator.reverseOrder()))
-                    .thenComparing(ErrorRecord::getId, Comparator.nullsLast(Comparator.naturalOrder())));
+            records.sort(new Comparator<ErrorRecord>() {
+                @Override
+                public int compare(ErrorRecord r1, ErrorRecord r2) {
+                    if (r1.getCreatedAt() != null && r2.getCreatedAt() != null) {
+                        int dateCompare = r2.getCreatedAt().compareTo(r1.getCreatedAt());
+                        if (dateCompare != 0) {
+                            return dateCompare;
+                        }
+                    } else if (r1.getCreatedAt() != null) {
+                        return -1;
+                    } else if (r2.getCreatedAt() != null) {
+                        return 1;
+                    }
 
-            List<PatternExampleDto> examples = new ArrayList<>(Math.min(MAX_EXAMPLES, records.size()));
-            for (ErrorRecord record : records) {
-                if (examples.size() >= MAX_EXAMPLES) {
-                    break;
+                    if (r1.getId() != null && r2.getId() != null) {
+                        return r1.getId().compareTo(r2.getId());
+                    }
+                    return 0;
                 }
-                examples.add(new PatternExampleDto(
+            });
+
+            List<PatternExampleDto> exampleDtos = new ArrayList<>();
+            for (int i = 0; i < records.size() && i < MAX_EXAMPLES; i++) {
+                ErrorRecord record = records.get(i);
+                exampleDtos.add(new PatternExampleDto(
                         record.getId(),
                         record.getSignature(),
                         record.getMessage(),
                         record.getProject(),
-                        record.getLanguage()));
+                        record.getLanguage()
+                ));
             }
 
-            patterns.add(new PatternDto(tag, projects.size(), records.size(), examples));
+            patternsList.add(new PatternDto(tag, uniqueProjects.size(), records.size(), exampleDtos));
         }
 
-        // Rank patterns by project count, occurrence count, and tag name
-        patterns.sort(Comparator
-                .comparingInt(PatternDto::projectCount).reversed()
-                .thenComparing(Comparator.comparingInt(PatternDto::occurrenceCount).reversed())
-                .thenComparing(PatternDto::tag, Comparator.nullsLast(Comparator.naturalOrder())));
+        patternsList.sort(new Comparator<PatternDto>() {
+            @Override
+            public int compare(PatternDto p1, PatternDto p2) {
+                int projDiff = Integer.compare(p2.projectCount(), p1.projectCount());
+                if (projDiff != 0) {
+                    return projDiff;
+                }
+                int occDiff = Integer.compare(p2.occurrenceCount(), p1.occurrenceCount());
+                if (occDiff != 0) {
+                    return occDiff;
+                }
+                if (p1.tag() != null && p2.tag() != null) {
+                    return p1.tag().compareTo(p2.tag());
+                }
+                return 0;
+            }
+        });
 
-        return patterns;
+        return patternsList;
     }
 
-    // Determine the most common tag across errors in a cluster
     private static String dominantTag(List<ErrorRecord> records) {
-        // Count tags (deduplicated per record so one error record only votes once)
-        Map<String, Long> counts = records.stream()
-                .map(ErrorRecord::getTags)
-                .filter(Objects::nonNull)
-                .flatMap(tags -> tags.stream()
-                        .filter(rawTag -> rawTag != null && !rawTag.isBlank())
-                        .map(rawTag -> rawTag.trim().toLowerCase(Locale.ROOT))
-                        .distinct())
-                .collect(Collectors.groupingBy(tag -> tag, Collectors.counting()));
+        Map<String, Integer> tagCounts = new HashMap<>();
 
-        if (!counts.isEmpty()) {
-            return counts.entrySet().stream()
-                    .max(Map.Entry.<String, Long>comparingByValue()
-                            .thenComparing(Map.Entry.comparingByKey(Comparator.reverseOrder())))
-                    .map(Map.Entry::getKey)
-                    .orElse(UNTAGGED);
-        }
-
-        // Fallback to common language if all records share the same language
-        String language = null;
         for (ErrorRecord record : records) {
-            String candidate = record.getLanguage();
-            if (candidate == null || candidate.isBlank()) {
+            List<String> tags = record.getTags();
+            if (tags == null) {
+                continue;
+            }
+
+            Set<String> uniqueTagsInRecord = new HashSet<>();
+            for (String rawTag : tags) {
+                if (rawTag != null && !rawTag.trim().isEmpty()) {
+                    uniqueTagsInRecord.add(rawTag.trim().toLowerCase(Locale.ROOT));
+                }
+            }
+
+            for (String tag : uniqueTagsInRecord) {
+                int current = tagCounts.getOrDefault(tag, 0);
+                tagCounts.put(tag, current + 1);
+            }
+        }
+
+        if (!tagCounts.isEmpty()) {
+            String dominant = UNTAGGED;
+            int maxCount = -1;
+
+            for (Map.Entry<String, Integer> entry : tagCounts.entrySet()) {
+                String tag = entry.getKey();
+                int count = entry.getValue();
+
+                if (count > maxCount || (count == maxCount && tag.compareTo(dominant) > 0)) {
+                    maxCount = count;
+                    dominant = tag;
+                }
+            }
+            return dominant;
+        }
+
+        String commonLanguage = null;
+        for (ErrorRecord record : records) {
+            String lang = record.getLanguage();
+            if (lang == null || lang.trim().isEmpty()) {
                 return UNTAGGED;
             }
-            String normalized = candidate.trim().toLowerCase(Locale.ROOT);
-            if (language == null) {
-                language = normalized;
-            } else if (!language.equals(normalized)) {
+            String normalizedLang = lang.trim().toLowerCase(Locale.ROOT);
+            if (commonLanguage == null) {
+                commonLanguage = normalizedLang;
+            } else if (!commonLanguage.equals(normalizedLang)) {
                 return UNTAGGED;
             }
         }
-        return language == null ? UNTAGGED : language;
+
+        return commonLanguage == null ? UNTAGGED : commonLanguage;
     }
 }
+
+
